--- a/DX22_Project.vcxproj
+++ b/DX22_Project.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="Score.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderList.cpp" />
+    <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StageObjectManager.cpp" />
     <ClCompile Include="Startup.cpp" />
@@ -217,6 +218,7 @@
     <ClInclude Include="Score.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderList.h" />
+    <ClInclude Include="Sound.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StageObjectManager.h" />
     <ClInclude Include="Texture.h" />
