--- a/DX22_Project.vcxproj
+++ b/DX22_Project.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="Score.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderList.cpp" />
+    <ClCompile Include="SkyDome.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StageObjectManager.cpp" />
@@ -222,6 +223,7 @@
     <ClInclude Include="Score.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderList.h" />
+    <ClInclude Include="SkyDome.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StageObjectManager.h" />
